examples/bad/unknown_function.mtch
int main() {
    print(f(4, "Ala", 6));

    return 0;
}